# oi-extension

./: .gitignore  .gitlab-ci.yml  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  README_private.md  eslint.config.mjs  oi-extension-0.0.1.vsix  package-lock.json  package.json  tsconfig.json  windowstest.wsb
resources/html/: index.html  information.html  stepper.html  stepper2.html  style.css
resources/oi-template/: .gitignore  .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig.defaults
resources/oi-template/components/OpenIndus/: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  build-docs.gitlab-ci.yml
resources/oi-template/components/OpenIndus/api/: OIBus.cpp  OIBus.h  OIConsole.cpp  OIConsole.h  OICore.cpp  OICore.h  OIDiscrete.cpp  OIDiscrete.h  OIEtor.h  OIFunction.h  OIMessage.h  OIMixed.cpp  OIMixed.h  OIModule.cpp  OIModule.h  OIProtocol.h  OIRS.cpp  OIRS.h  OIRelay.cpp  OIRelay.h  OIStepper.cpp  OIStepper.h  OIStor.h  OISystem.cpp  OISystem.h  OIType.h  OpenIndus.h
resources/oi-template/components/OpenIndus/docs/: README.md
resources/project_files/: CMakeLists.txt  main.cpp  platformio.ini  sdkconfig.defaults
resources/scripts/: OISerial.py  deviceTypeList.py  flashDevicefirmware.py  getConnectedDevices.py  getDeviceId.py  getSlaveDevices.py  getSlavesDevices.py  program.py  setDeviceId.py
src/: OISerial.ts  createProject.ts  customTreeView.ts  deviceTypeList.ts  extension.ts  flashDeviceFirmware.ts  flashSlaveDeviceFirmware.ts  getDeviceId.ts  getDeviceInfo.ts  getDeviceInfoList.ts  getPortList.ts  getSlaveDeviceInfoList.ts  getSystemInfo.ts  multiStepInput.ts  setDeviceId.ts  updateDeviceId.ts  utils.ts
src/com/: NodeTransport.ts  OISerial.ts  OIStepper.ts  test.js
src/esptool-js/: README.md  esploader.d.ts  esploader.js  index.ts  nodeTransport.ts  reset.d.ts  reset.js  stubFlasher.js  tsconfig.json
src/esptool-js-fix/: CustomESPLoader.ts  NodeTransport.ts
(+41 files in other folders)
